# T3_ELO329

./: .gitignore  README.md  documentacion.html
Stage1/: CMakeLists.txt  Cellular.cpp  CellularView.cpp  Equipo.cpp  Equipo.h  Stage1.cpp  Territory.cpp  Territory.h  TerritoryView.cpp  TerritoryView.h
Stage2/: CMakeLists.txt  Cellular.cpp  Cellular.h  CellularView.cpp  CellularView.h  EloTelTag.cpp  EloTelTag.h  EloTelTagView.cpp  EloTelTagView.h  Equipo.cpp  Equipo.h  MainWindow.h  Stage2.cpp  Tablet.cpp  Tablet.h  TabletView.cpp  TabletView.h  Territory.cpp  Territory.h  TerritoryView.cpp  TerritoryView.h
Stage3/: CMakeLists.txt  Cellular.cpp  Cellular.h  ETNube.cpp  ETNube.h  EloTelTag.h  Equipo.h  EquipoPasivo.cpp  MainWindow.cpp  SmartDeviceView.cpp  TabletView.cpp  TabletView.h  TerritoryView.cpp  TerritoryView.h  VentanaFindMy.cpp  VentanaFindMy.h  config.txt
Stage4/: CMakeLists.txt  Cellular.cpp  Cellular.h  CellularView.cpp  CellularView.h  ETNube.cpp  ETNube.h  EloTelTag.cpp  EloTelTagView.cpp  EloTelTagView.h  Equipo.cpp  Equipo.h  EquipoPasivo.cpp  EquipoPasivo.h  MainWindow.cpp  MainWindow.h  SmartDeviceView.cpp  SmartDeviceView.h  Tablet.cpp  Tablet.h  Territory.cpp  Territory.h  TerritoryView.cpp  TerritoryView.h  VentanaFindMy.cpp  VentanaFindMy.h  gFindMy.cpp  gFindMy.h  recursos.qrc
